--- a/infrastructure/c3-azure.csproj
+++ b/infrastructure/c3-azure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.*" />
     <PackageReference Include="Pulumi.AzureNative" Version="3.*" />
+    <PackageReference Include="Pulumi.Command" Version="1.*" />
   </ItemGroup>
 
 </Project>
